@@ -43,14 +43,14 @@
 #endif
 
 #if defined (_STLP_WIN32) || defined (__sgi) || defined (_STLP_SPARC_SOLARIS_THREADS)
-  typedef long __stl_atomic_t;
+typedef long __stl_atomic_t;
 #else 
 /* Don't import whole namespace!!!! - ptr */
 // # if defined (_STLP_USE_NAMESPACES) && ! defined (_STLP_VENDOR_GLOBAL_CSTD)
 // // using _STLP_VENDOR_CSTD::size_t;
 // using namespace _STLP_VENDOR_CSTD;
 // # endif
-  typedef size_t __stl_atomic_t;
+typedef size_t __stl_atomic_t;
 #endif  
 
 #if defined(_STLP_SGI_THREADS)
@@ -98,6 +98,7 @@
 #    define _STLP_ATOMIC_INCREMENT(__x)           InterlockedIncrement((long*)__x)
 #    define _STLP_ATOMIC_DECREMENT(__x)           InterlockedDecrement((long*)__x)
 #    define _STLP_ATOMIC_EXCHANGE(__x, __y)       InterlockedExchange((long*)__x, (long)__y)
+#    define _STLP_ATOMIC_EXCHANGE_PTR(__x, __y)   STLPInterlockedExchangePointer((void**)__x, (void*)__y)
 /*
  * The following functionnality is only available since Windows 98, those that are targeting previous OSes
  * should define _WIN32_WINDOWS to a value lower that the one of Win 98, see Platform SDK documentation for
@@ -155,7 +156,7 @@ using _STLP_VENDOR_CSTD::time_t;
 #  endif /* GNUC */
 #endif
 
-#ifndef _STLP_MUTEX_INITIALIZER
+#if !defined (_STLP_MUTEX_INITIALIZER)
 #  if defined(_STLP_ATOMIC_EXCHANGE)
 #    define _STLP_MUTEX_INITIALIZER = { 0 }
 #  elif defined(_STLP_UITHREADS)
@@ -167,7 +168,7 @@ using _STLP_VENDOR_CSTD::time_t;
 
 _STLP_BEGIN_NAMESPACE
 
-#ifndef _STLP_USE_PTHREAD_SPINLOCK
+#if !defined (_STLP_USE_PTHREAD_SPINLOCK)
 // Helper struct.  This is a workaround for various compilers that don't
 // handle static variables in inline functions properly.
 template <int __inst>
@@ -218,15 +219,15 @@ struct _STLP_CLASS_DECLSPEC _STLP_mutex_base
         asm("sync");
         *__lock = 0;
 #  elif defined(_STLP_SGI_THREADS) && __mips >= 3 \
-	 && (defined (_ABIN32) || defined(_ABI64))
+     && (defined (_ABIN32) || defined(_ABI64))
         __lock_release(__lock);
 #  elif defined (_STLP_SPARC_SOLARIS_THREADS)
 #   if defined (__WORD64) || defined (__arch64__) || defined (__sparcv9) || defined (__sparcv8plus)
-	asm("membar #StoreStore ; membar #LoadStore");
+    asm("membar #StoreStore ; membar #LoadStore");
 #   else
-	asm(" stbar ");
+    asm(" stbar ");
 #   endif
-        *__lock = 0;	
+        *__lock = 0;    
 #  else
         *__lock = 0;
         // This is not sufficient on many multiprocessors, since
@@ -280,7 +281,7 @@ struct _STLP_CLASS_DECLSPEC _STLP_mutex_base
 # elif defined (_STLP_UITHREADS)
   mutex_t _M_lock;
   inline void _M_initialize() {
-    mutex_init(&_M_lock,0,NULL);	
+    mutex_init(&_M_lock,0,NULL);
   }
   inline void _M_destroy() {
     mutex_destroy(&_M_lock);
@@ -315,7 +316,7 @@ struct _STLP_CLASS_DECLSPEC _STLP_mutex_base
      status_t t = release_sem(sem);
      assert(t == B_NO_ERROR);
   }
-# else		//*ty 11/24/2001 - added configuration check
+# else      //*ty 11/24/2001 - added configuration check
 #  error "Unknown thread facility configuration"
 # endif
 #else /* No threads */
@@ -365,7 +366,6 @@ private:
  */
 class _STLP_CLASS_DECLSPEC _Refcount_Base
 {
-  private:
   // The data member _M_ref_count
   volatile __stl_atomic_t _M_ref_count;
 
@@ -400,8 +400,9 @@ class _STLP_CLASS_DECLSPEC _Refcount_Base
 // This is guaranteed to behave as though it were atomic only if all
 // possibly concurrent updates use _Atomic_swap.
 // In some cases the operation is emulated with a lock.
-# if defined (_STLP_THREADS)
-#  ifdef _STLP_ATOMIC_EXCHANGE
+// Idem for _Atomic_swap_ptr
+#if defined (_STLP_THREADS)
+#  if defined (_STLP_ATOMIC_EXCHANGE)
 inline __stl_atomic_t _Atomic_swap(volatile __stl_atomic_t * __p, __stl_atomic_t __q) {
   return (__stl_atomic_t) _STLP_ATOMIC_EXCHANGE(__p,__q);
 }
@@ -411,7 +412,6 @@ template<int __dummy>
 struct _Swap_lock_struct {
   static _STLP_STATIC_MUTEX _S_swap_lock;
 };
-
 
 // This should be portable, but performance is expected
 // to be quite awful.  This really needs platform specific
@@ -424,7 +424,7 @@ inline __stl_atomic_t _Atomic_swap(volatile __stl_atomic_t * __p, __stl_atomic_t
   return __result;
 }
 #  endif // _STLP_PTHREADS || _STLP_UITHREADS || _STLP_OS2THREADS || _STLP_USE_PTHREAD_SPINLOCK
-# else // !_STLP_THREADS
+#else // !_STLP_THREADS
 /* no threads */
 static inline __stl_atomic_t  _STLP_CALL
 _Atomic_swap(volatile __stl_atomic_t * __p, __stl_atomic_t __q) {
@@ -432,26 +432,30 @@ _Atomic_swap(volatile __stl_atomic_t * __p, __stl_atomic_t __q) {
   *__p = __q;
   return __result;
 }
-# endif // _STLP_THREADS
+#endif // _STLP_THREADS
+
+inline void* _Atomic_swap_ptr(void* volatile* __p, void* __q) {
+#if defined (_STLP_THREADS) && defined (_STLP_ATOMIC_EXCHANGE_PTR)
+  return _STLP_ATOMIC_EXCHANGE_PTR(__p,__q);
+#else
+  return (void*)_Atomic_swap((volatile __stl_atomic_t *)__p, (__stl_atomic_t)__q);
+#endif
+}
 
 #ifdef _STLP_BETHREADS
 
 template <int __inst>
-struct _STLP_beos_static_lock_data
-{
-	static bool is_init;
-	struct mutex_t : public _STLP_mutex
-	{
-		mutex_t()
-		{
-			_STLP_beos_static_lock_data<0>::is_init = true;
-		}
-		~mutex_t()
-		{
-			_STLP_beos_static_lock_data<0>::is_init = false;
-		}
-	};
-	static mutex_t mut;
+struct _STLP_beos_static_lock_data {
+  static bool is_init;
+  struct mutex_t : public _STLP_mutex {
+    mutex_t() {
+      _STLP_beos_static_lock_data<0>::is_init = true;
+    }
+    ~mutex_t() {
+      _STLP_beos_static_lock_data<0>::is_init = false;
+    }
+  };
+  static mutex_t mut;
 };
 
 template <int __inst>
@@ -459,39 +463,33 @@ bool _STLP_beos_static_lock_data<__inst>::is_init = false;
 template <int __inst>
 typename _STLP_beos_static_lock_data<__inst>::mutex_t _STLP_beos_static_lock_data<__inst>::mut;
 
-
-inline void _STLP_mutex_base::_M_acquire_lock() 
-{
-	if(sem == 0)
-	{
-		// we need to initialise on demand here
-		// to prevent race conditions use our global
-		// mutex if it's available:
-		if(_STLP_beos_static_lock_data<0>::is_init)
-		{
-			_STLP_auto_lock al(_STLP_beos_static_lock_data<0>::mut);
-			if(sem == 0) _M_initialize();
-		}
-		else
-		{
-			// no lock available, we must still be
-			// in startup code, THERE MUST BE ONE THREAD
-			// ONLY active at this point.
-			_M_initialize();
-		}
+inline void _STLP_mutex_base::_M_acquire_lock() {
+  if (sem == 0) {
+    // we need to initialise on demand here
+    // to prevent race conditions use our global
+    // mutex if it's available:
+    if (_STLP_beos_static_lock_data<0>::is_init) {
+      _STLP_auto_lock al(_STLP_beos_static_lock_data<0>::mut);
+      if (sem == 0) _M_initialize();
     }
-	status_t t;
-    t = acquire_sem(sem);
-    assert(t == B_NO_ERROR);
+    else {
+      // no lock available, we must still be
+      // in startup code, THERE MUST BE ONE THREAD
+      // ONLY active at this point.
+      _M_initialize();
+    }
+  }
+  status_t t;
+  t = acquire_sem(sem);
+  assert(t == B_NO_ERROR);
 }
-
 #endif
 
 _STLP_END_NAMESPACE
 
-# if !defined (_STLP_LINK_TIME_INSTANTIATION)
+#if !defined (_STLP_LINK_TIME_INSTANTIATION)
 #  include <stl/_threads.c>
-# endif
+#endif
 
 #endif /* _STLP_INTERNAL_THREADS_H */
 
