@@ -23,8 +23,9 @@
 
 #if !defined (_STLP_WINDOWS_H_INCLUDED)
 #  define _STLP_WINDOWS_H_INCLUDED
-#  if !(defined ( _STLP_MSVC ) || defined (__BORLANDC__) || defined (__ICL) || defined (__WATCOMC__) || defined (__MINGW32__) || defined (__DMC__))
-#    ifdef _STLP_USE_MFC
+#  if !(defined ( _STLP_MSVC ) || defined (__BORLANDC__) || defined (__ICL) || defined (__WATCOMC__) || \
+        defined (__MINGW32__) || defined (__DMC__))
+#    if defined (_STLP_USE_MFC)
 #      include <afx.h>
 #    else
 #      include <windows.h>
@@ -32,62 +33,75 @@
 #  else
 // This section serves as a replacement for windows.h header for Visual C++
 extern "C" {
-#  if (defined(_M_AMD64) || defined(_M_IA64) || defined(_M_MRX000) || defined(_M_ALPHA) || \
-      (defined(_M_PPC) && (_MSC_VER >= 1000))) && !defined(RC_INVOKED)
-#    define InterlockedIncrement       _InterlockedIncrement
-#    define InterlockedDecrement       _InterlockedDecrement
-#    define InterlockedExchange        _InterlockedExchange
-#    define _STLP_STDCALL
-#  else
-#    ifdef _MAC
-#      define _STLP_STDCALL _cdecl
+#    if (defined(_M_AMD64) || defined(_M_IA64) || defined(_M_MRX000) || defined(_M_ALPHA) || \
+        (defined(_M_PPC) && (_MSC_VER >= 1000))) && !defined(RC_INVOKED)
+#      define InterlockedIncrement       _InterlockedIncrement
+#      define InterlockedDecrement       _InterlockedDecrement
+#      define InterlockedExchange        _InterlockedExchange
+//Here we use a different macro name than the InterlockedExchangePointer SDK function
+// to avoid macro definition conflict.
+#      define STLPInterlockedExchangePointer _InterlockedExchangePointer
+#      define _STLP_STDCALL
 #    else
-#      define _STLP_STDCALL __stdcall
+#      if defined (_MAC)
+#        define _STLP_STDCALL _cdecl
+#      else
+#        define _STLP_STDCALL __stdcall
+#      endif
 #    endif
-#  endif
 
-#  if defined (_STLP_NEW_PLATFORM_SDK)
+#    if defined (_STLP_NEW_PLATFORM_SDK)
 _STLP_IMPORT_DECLSPEC long _STLP_STDCALL InterlockedIncrement(long volatile *);
 _STLP_IMPORT_DECLSPEC long _STLP_STDCALL InterlockedDecrement(long volatile *);
 _STLP_IMPORT_DECLSPEC long _STLP_STDCALL InterlockedExchange(long volatile *, long);
+#      if defined (STLPInterlockedExchangePointer)
+_STLP_IMPORT_DECLSPEC void* _STLP_STDCALL STLPInterlockedExchangePointer(void* volatile *, void*);
+#      endif
 _STLP_IMPORT_DECLSPEC long _STLP_STDCALL InterlockedCompareExchange(long volatile *, long, long);
-#  elif defined(_STLP_WCE)
+#    elif defined (_STLP_WCE)
 long _STLP_STDCALL InterlockedIncrement(long*);
 long _STLP_STDCALL InterlockedDecrement(long*);
 long _STLP_STDCALL InterlockedExchange(long*, long);
-#  else
-  // boris : for the latest SDK, you may actually need the other version of the declaration (above)
-  // even for earlier VC++ versions. There is no way to tell SDK versions apart, sorry ...
+#    else
+// boris : for the latest SDK, you may actually need the other version of the declaration (above)
+// even for earlier VC++ versions. There is no way to tell SDK versions apart, sorry ...
 _STLP_IMPORT_DECLSPEC long _STLP_STDCALL InterlockedIncrement(long*);
 _STLP_IMPORT_DECLSPEC long _STLP_STDCALL InterlockedDecrement(long*);
 _STLP_IMPORT_DECLSPEC long _STLP_STDCALL InterlockedExchange(long*, long);
-#  endif
+#    endif
 
-#  if defined(_STLP_WCE) && defined(_ARM_)
+#    if !defined (STLPInterlockedExchangePointer)
+//This API function do not exist in the old platform SDK and is equivalent to
+//InterlockedExchange on 32 bits platform:
+#      define STLPInterlockedExchangePointer(a, b) (void*)InterlockedExchange((long*)a, (long)b)
+#    endif
+
+#    if defined (_STLP_WCE) && defined (_ARM_)
 void _STLP_STDCALL Sleep(unsigned long);
-#  else
-_STLP_IMPORT_DECLSPEC void _STLP_STDCALL Sleep(unsigned long);
-#  endif
-#  ifdef _STLP_WCE
-void _STLP_STDCALL OutputDebugStringA( const char* lpOutputString );
-#  else
-_STLP_IMPORT_DECLSPEC void _STLP_STDCALL OutputDebugStringA(const char* lpOutputString);
-#  endif
-
-#  ifdef _STLP_DEBUG
-typedef unsigned long DWORD;
-#    ifdef _STLP_WCE
-DWORD _STLP_STDCALL GetCurrentThreadId();
 #    else
-_STLP_IMPORT_DECLSPEC DWORD _STLP_STDCALL GetCurrentThreadId();
-#    endif /* !STLP_WCE_NET */
-#  endif /* _STLP_DEBUG */
+_STLP_IMPORT_DECLSPEC void _STLP_STDCALL Sleep(unsigned long);
+#    endif
+#    if defined (_STLP_WCE)
+void _STLP_STDCALL OutputDebugStringA(const char* lpOutputString);
+#    else
+_STLP_IMPORT_DECLSPEC void _STLP_STDCALL OutputDebugStringA(const char* lpOutputString);
+#    endif
 
-#  if defined (InterlockedIncrement)
-#    pragma intrinsic(_InterlockedIncrement)
-#    pragma intrinsic(_InterlockedDecrement)
-#    pragma intrinsic(_InterlockedExchange)
-#  endif
+#    if defined (_STLP_DEBUG)
+typedef unsigned long DWORD;
+#      if defined (_STLP_WCE)
+DWORD _STLP_STDCALL GetCurrentThreadId();
+#      else
+_STLP_IMPORT_DECLSPEC DWORD _STLP_STDCALL GetCurrentThreadId();
+#      endif /* !STLP_WCE_NET */
+#    endif /* _STLP_DEBUG */
+
+#    if defined (InterlockedIncrement)
+#      pragma intrinsic(_InterlockedIncrement)
+#      pragma intrinsic(_InterlockedDecrement)
+#      pragma intrinsic(_InterlockedExchange)
+#      pragma intrinsic(_InterlockedExchangePointer)
+#    endif
 } /* extern "C" */
 
 #  endif /* STL_MSVC __BORLANDC__ __ICL __WATCOMC__ __MINGW32__ __DMC__*/
